frontend/tests/cases/positive/interfaces/simple/interface-simple-23.gr
interface Simple a where
  simple : a -> a

data A a = A'

-- interface with complex constraint
interface {Simple (A a)} => Simple2 a where
  simple2 : a -> a
