frontend/tests/cases/negative/selfConstraintInterface.gr
-- interface is a constraint to itself
--
-- technically not in scope
interface {Simple a} => Simple a where
  simple : a -> a
